Kaggle Notebook | Exercise: Creating, Reading and Writing | Version 2

--- a/exercise-creating-reading-and-writing.ipynb
+++ b/exercise-creating-reading-and-writing.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5016a509",
+   "id": "5ad859e2",
    "metadata": {
     "papermill": {
-     "duration": 0.006886,
-     "end_time": "2022-08-16T00:44:40.504579",
+     "duration": 0.005857,
+     "end_time": "2022-08-16T02:04:58.193487",
      "exception": false,
-     "start_time": "2022-08-16T00:44:40.497693",
+     "start_time": "2022-08-16T02:04:58.187630",
      "status": "completed"
     },
     "tags": []
@@ -21,13 +21,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed7120cd",
+   "id": "3df7f71b",
    "metadata": {
     "papermill": {
-     "duration": 0.004922,
-     "end_time": "2022-08-16T00:44:40.514837",
+     "duration": 0.004119,
+     "end_time": "2022-08-16T02:04:58.202333",
      "exception": false,
-     "start_time": "2022-08-16T00:44:40.509915",
+     "start_time": "2022-08-16T02:04:58.198214",
      "status": "completed"
     },
     "tags": []
@@ -43,19 +43,19 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a94978ff",
+   "id": "b66bfcd2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-08-16T00:44:40.527119Z",
-     "iopub.status.busy": "2022-08-16T00:44:40.526654Z",
-     "iopub.status.idle": "2022-08-16T00:44:42.311311Z",
-     "shell.execute_reply": "2022-08-16T00:44:42.309993Z"
+     "iopub.execute_input": "2022-08-16T02:04:58.212645Z",
+     "iopub.status.busy": "2022-08-16T02:04:58.212151Z",
+     "iopub.status.idle": "2022-08-16T02:04:59.531340Z",
+     "shell.execute_reply": "2022-08-16T02:04:59.530136Z"
     },
     "papermill": {
-     "duration": 1.79487,
-     "end_time": "2022-08-16T00:44:42.314880",
+     "duration": 1.326897,
+     "end_time": "2022-08-16T02:04:59.533509",
      "exception": false,
-     "start_time": "2022-08-16T00:44:40.520010",
+     "start_time": "2022-08-16T02:04:58.206612",
      "status": "completed"
     },
     "tags": []
@@ -79,13 +79,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04b95c8a",
+   "id": "2c683093",
    "metadata": {
     "papermill": {
-     "duration": 0.005119,
-     "end_time": "2022-08-16T00:44:42.325918",
+     "duration": 0.004345,
+     "end_time": "2022-08-16T02:04:59.543010",
      "exception": false,
-     "start_time": "2022-08-16T00:44:42.320799",
+     "start_time": "2022-08-16T02:04:59.538665",
      "status": "completed"
     },
     "tags": []
@@ -96,13 +96,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18f736d9",
+   "id": "1cfb9c09",
    "metadata": {
     "papermill": {
-     "duration": 0.004943,
-     "end_time": "2022-08-16T00:44:42.336056",
+     "duration": 0.004121,
+     "end_time": "2022-08-16T02:04:59.551562",
      "exception": false,
-     "start_time": "2022-08-16T00:44:42.331113",
+     "start_time": "2022-08-16T02:04:59.547441",
      "status": "completed"
     },
     "tags": []
@@ -118,19 +118,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "0696120d",
+   "id": "f789889a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-08-16T00:44:42.348888Z",
-     "iopub.status.busy": "2022-08-16T00:44:42.348477Z",
-     "iopub.status.idle": "2022-08-16T00:44:42.369888Z",
-     "shell.execute_reply": "2022-08-16T00:44:42.368712Z"
+     "iopub.execute_input": "2022-08-16T02:04:59.561680Z",
+     "iopub.status.busy": "2022-08-16T02:04:59.561187Z",
+     "iopub.status.idle": "2022-08-16T02:04:59.576462Z",
+     "shell.execute_reply": "2022-08-16T02:04:59.575753Z"
     },
     "papermill": {
-     "duration": 0.030804,
-     "end_time": "2022-08-16T00:44:42.372440",
+     "duration": 0.022211,
+     "end_time": "2022-08-16T02:04:59.578118",
      "exception": false,
-     "start_time": "2022-08-16T00:44:42.341636",
+     "start_time": "2022-08-16T02:04:59.555907",
      "status": "completed"
     },
     "tags": []
@@ -217,19 +217,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "c19d8e00",
+   "id": "21951d68",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-08-16T00:44:42.386834Z",
-     "iopub.status.busy": "2022-08-16T00:44:42.385521Z",
-     "iopub.status.idle": "2022-08-16T00:44:42.390963Z",
-     "shell.execute_reply": "2022-08-16T00:44:42.389567Z"
+     "iopub.execute_input": "2022-08-16T02:04:59.589011Z",
+     "iopub.status.busy": "2022-08-16T02:04:59.588380Z",
+     "iopub.status.idle": "2022-08-16T02:04:59.591384Z",
+     "shell.execute_reply": "2022-08-16T02:04:59.590818Z"
     },
     "papermill": {
-     "duration": 0.01552,
-     "end_time": "2022-08-16T00:44:42.393762",
+     "duration": 0.009923,
+     "end_time": "2022-08-16T02:04:59.592849",
      "exception": false,
-     "start_time": "2022-08-16T00:44:42.378242",
+     "start_time": "2022-08-16T02:04:59.582926",
      "status": "completed"
     },
     "tags": []
@@ -242,13 +242,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e422705a",
+   "id": "bdc1c56a",
    "metadata": {
     "papermill": {
-     "duration": 0.005581,
-     "end_time": "2022-08-16T00:44:42.405364",
+     "duration": 0.004449,
+     "end_time": "2022-08-16T02:04:59.601928",
      "exception": false,
-     "start_time": "2022-08-16T00:44:42.399783",
+     "start_time": "2022-08-16T02:04:59.597479",
      "status": "completed"
     },
     "tags": []
@@ -264,19 +264,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c44194ae",
+   "id": "ffcce999",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-08-16T00:44:42.419677Z",
-     "iopub.status.busy": "2022-08-16T00:44:42.418957Z",
-     "iopub.status.idle": "2022-08-16T00:44:42.437578Z",
-     "shell.execute_reply": "2022-08-16T00:44:42.436444Z"
+     "iopub.execute_input": "2022-08-16T02:04:59.612566Z",
+     "iopub.status.busy": "2022-08-16T02:04:59.612292Z",
+     "iopub.status.idle": "2022-08-16T02:04:59.622639Z",
+     "shell.execute_reply": "2022-08-16T02:04:59.621806Z"
     },
     "papermill": {
-     "duration": 0.028794,
-     "end_time": "2022-08-16T00:44:42.440074",
+     "duration": 0.017909,
+     "end_time": "2022-08-16T02:04:59.624573",
      "exception": false,
-     "start_time": "2022-08-16T00:44:42.411280",
+     "start_time": "2022-08-16T02:04:59.606664",
      "status": "completed"
     },
     "tags": []
@@ -369,19 +369,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "71822fbe",
+   "id": "816c019f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-08-16T00:44:42.454680Z",
-     "iopub.status.busy": "2022-08-16T00:44:42.454170Z",
-     "iopub.status.idle": "2022-08-16T00:44:42.458420Z",
-     "shell.execute_reply": "2022-08-16T00:44:42.457461Z"
+     "iopub.execute_input": "2022-08-16T02:04:59.635525Z",
+     "iopub.status.busy": "2022-08-16T02:04:59.635231Z",
+     "iopub.status.idle": "2022-08-16T02:04:59.638612Z",
+     "shell.execute_reply": "2022-08-16T02:04:59.637817Z"
     },
     "papermill": {
-     "duration": 0.014389,
-     "end_time": "2022-08-16T00:44:42.460598",
+     "duration": 0.010709,
+     "end_time": "2022-08-16T02:04:59.640263",
      "exception": false,
-     "start_time": "2022-08-16T00:44:42.446209",
+     "start_time": "2022-08-16T02:04:59.629554",
      "status": "completed"
     },
     "tags": []
@@ -394,13 +394,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d748456d",
+   "id": "e6f8dfc4",
    "metadata": {
     "papermill": {
-     "duration": 0.005751,
-     "end_time": "2022-08-16T00:44:42.472651",
+     "duration": 0.004761,
+     "end_time": "2022-08-16T02:04:59.650043",
      "exception": false,
-     "start_time": "2022-08-16T00:44:42.466900",
+     "start_time": "2022-08-16T02:04:59.645282",
      "status": "completed"
     },
     "tags": []
@@ -422,19 +422,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "1fa78fdf",
+   "id": "2ac3a67b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-08-16T00:44:42.486406Z",
-     "iopub.status.busy": "2022-08-16T00:44:42.485959Z",
-     "iopub.status.idle": "2022-08-16T00:44:42.499464Z",
-     "shell.execute_reply": "2022-08-16T00:44:42.498561Z"
+     "iopub.execute_input": "2022-08-16T02:04:59.661197Z",
+     "iopub.status.busy": "2022-08-16T02:04:59.660930Z",
+     "iopub.status.idle": "2022-08-16T02:04:59.670092Z",
+     "shell.execute_reply": "2022-08-16T02:04:59.669529Z"
     },
     "papermill": {
-     "duration": 0.022902,
-     "end_time": "2022-08-16T00:44:42.501588",
+     "duration": 0.016504,
+     "end_time": "2022-08-16T02:04:59.671625",
      "exception": false,
-     "start_time": "2022-08-16T00:44:42.478686",
+     "start_time": "2022-08-16T02:04:59.655121",
      "status": "completed"
     },
     "tags": []
@@ -490,19 +490,19 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "3ea28990",
+   "id": "2061d2d8",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-08-16T00:44:42.517293Z",
-     "iopub.status.busy": "2022-08-16T00:44:42.516444Z",
-     "iopub.status.idle": "2022-08-16T00:44:42.521246Z",
-     "shell.execute_reply": "2022-08-16T00:44:42.520239Z"
+     "iopub.execute_input": "2022-08-16T02:04:59.683074Z",
+     "iopub.status.busy": "2022-08-16T02:04:59.682832Z",
+     "iopub.status.idle": "2022-08-16T02:04:59.685914Z",
+     "shell.execute_reply": "2022-08-16T02:04:59.685202Z"
     },
     "papermill": {
-     "duration": 0.015389,
-     "end_time": "2022-08-16T00:44:42.523729",
+     "duration": 0.010552,
+     "end_time": "2022-08-16T02:04:59.687377",
      "exception": false,
-     "start_time": "2022-08-16T00:44:42.508340",
+     "start_time": "2022-08-16T02:04:59.676825",
      "status": "completed"
     },
     "tags": []
@@ -515,13 +515,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "00ec8506",
+   "id": "a03733a6",
    "metadata": {
     "papermill": {
-     "duration": 0.006153,
-     "end_time": "2022-08-16T00:44:42.536584",
+     "duration": 0.005103,
+     "end_time": "2022-08-16T02:04:59.697690",
      "exception": false,
-     "start_time": "2022-08-16T00:44:42.530431",
+     "start_time": "2022-08-16T02:04:59.692587",
      "status": "completed"
     },
     "tags": []
@@ -545,19 +545,19 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "21c1d1ba",
+   "id": "f5a19458",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-08-16T00:44:42.551934Z",
-     "iopub.status.busy": "2022-08-16T00:44:42.551527Z",
-     "iopub.status.idle": "2022-08-16T00:44:43.475863Z",
-     "shell.execute_reply": "2022-08-16T00:44:43.474453Z"
+     "iopub.execute_input": "2022-08-16T02:04:59.709523Z",
+     "iopub.status.busy": "2022-08-16T02:04:59.708781Z",
+     "iopub.status.idle": "2022-08-16T02:05:00.347096Z",
+     "shell.execute_reply": "2022-08-16T02:05:00.346278Z"
     },
     "papermill": {
-     "duration": 0.935454,
-     "end_time": "2022-08-16T00:44:43.478466",
+     "duration": 0.645873,
+     "end_time": "2022-08-16T02:05:00.348745",
      "exception": false,
-     "start_time": "2022-08-16T00:44:42.543012",
+     "start_time": "2022-08-16T02:04:59.702872",
      "status": "completed"
     },
     "tags": []
@@ -739,19 +739,19 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "f12e5df8",
+   "id": "810dcd6d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-08-16T00:44:43.494049Z",
-     "iopub.status.busy": "2022-08-16T00:44:43.493542Z",
-     "iopub.status.idle": "2022-08-16T00:44:43.498489Z",
-     "shell.execute_reply": "2022-08-16T00:44:43.497130Z"
+     "iopub.execute_input": "2022-08-16T02:05:00.361999Z",
+     "iopub.status.busy": "2022-08-16T02:05:00.361738Z",
+     "iopub.status.idle": "2022-08-16T02:05:00.365053Z",
+     "shell.execute_reply": "2022-08-16T02:05:00.364274Z"
     },
     "papermill": {
-     "duration": 0.015339,
-     "end_time": "2022-08-16T00:44:43.500844",
+     "duration": 0.011993,
+     "end_time": "2022-08-16T02:05:00.366706",
      "exception": false,
-     "start_time": "2022-08-16T00:44:43.485505",
+     "start_time": "2022-08-16T02:05:00.354713",
      "status": "completed"
     },
     "tags": []
@@ -764,13 +764,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51f4e207",
+   "id": "294fcaec",
    "metadata": {
     "papermill": {
-     "duration": 0.006657,
-     "end_time": "2022-08-16T00:44:43.514464",
+     "duration": 0.005439,
+     "end_time": "2022-08-16T02:05:00.377783",
      "exception": false,
-     "start_time": "2022-08-16T00:44:43.507807",
+     "start_time": "2022-08-16T02:05:00.372344",
      "status": "completed"
     },
     "tags": []
@@ -784,19 +784,19 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "a53ff5b2",
+   "id": "499223fb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-08-16T00:44:43.529778Z",
-     "iopub.status.busy": "2022-08-16T00:44:43.529345Z",
-     "iopub.status.idle": "2022-08-16T00:44:43.541895Z",
-     "shell.execute_reply": "2022-08-16T00:44:43.540772Z"
+     "iopub.execute_input": "2022-08-16T02:05:00.390083Z",
+     "iopub.status.busy": "2022-08-16T02:05:00.389840Z",
+     "iopub.status.idle": "2022-08-16T02:05:00.398224Z",
+     "shell.execute_reply": "2022-08-16T02:05:00.397405Z"
     },
     "papermill": {
-     "duration": 0.023264,
-     "end_time": "2022-08-16T00:44:43.544524",
+     "duration": 0.016424,
+     "end_time": "2022-08-16T02:05:00.399869",
      "exception": false,
-     "start_time": "2022-08-16T00:44:43.521260",
+     "start_time": "2022-08-16T02:05:00.383445",
      "status": "completed"
     },
     "tags": []
@@ -860,13 +860,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20d273b3",
+   "id": "4e256d42",
    "metadata": {
     "papermill": {
-     "duration": 0.006788,
-     "end_time": "2022-08-16T00:44:43.558432",
+     "duration": 0.006288,
+     "end_time": "2022-08-16T02:05:00.412098",
      "exception": false,
-     "start_time": "2022-08-16T00:44:43.551644",
+     "start_time": "2022-08-16T02:05:00.405810",
      "status": "completed"
     },
     "tags": []
@@ -878,19 +878,19 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "f6163608",
+   "id": "b8d92bb1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-08-16T00:44:43.575124Z",
-     "iopub.status.busy": "2022-08-16T00:44:43.573836Z",
-     "iopub.status.idle": "2022-08-16T00:44:43.583686Z",
-     "shell.execute_reply": "2022-08-16T00:44:43.582797Z"
+     "iopub.execute_input": "2022-08-16T02:05:00.426103Z",
+     "iopub.status.busy": "2022-08-16T02:05:00.425715Z",
+     "iopub.status.idle": "2022-08-16T02:05:00.438612Z",
+     "shell.execute_reply": "2022-08-16T02:05:00.437704Z"
     },
     "papermill": {
-     "duration": 0.020386,
-     "end_time": "2022-08-16T00:44:43.585902",
+     "duration": 0.021968,
+     "end_time": "2022-08-16T02:05:00.440352",
      "exception": false,
-     "start_time": "2022-08-16T00:44:43.565516",
+     "start_time": "2022-08-16T02:05:00.418384",
      "status": "completed"
     },
     "tags": []
@@ -899,7 +899,7 @@
     {
      "data": {
       "application/javascript": [
-       "parent.postMessage({\"jupyterEvent\": \"custom.exercise_interaction\", \"data\": {\"outcomeType\": 2, \"failureMessage\": \"Expected file to exist with name `cows_and_goats.csv`\", \"interactionType\": 1, \"questionType\": 2, \"questionId\": \"5_SaveAnimalsCsv\", \"learnToolsVersion\": \"0.3.4\", \"valueTowardsCompletion\": 0.0, \"exceptionClass\": \"\", \"trace\": \"\"}}, \"*\")"
+       "parent.postMessage({\"jupyterEvent\": \"custom.exercise_interaction\", \"data\": {\"outcomeType\": 1, \"valueTowardsCompletion\": 0.16666666666666666, \"interactionType\": 1, \"questionType\": 2, \"questionId\": \"5_SaveAnimalsCsv\", \"learnToolsVersion\": \"0.3.4\", \"failureMessage\": \"\", \"exceptionClass\": \"\", \"trace\": \"\"}}, \"*\")"
       ],
       "text/plain": [
        "<IPython.core.display.Javascript object>"
@@ -911,10 +911,10 @@
     {
      "data": {
       "text/markdown": [
-       "<span style=\"color:#cc3333\">Incorrect:</span> Expected file to exist with name `cows_and_goats.csv`"
+       "<span style=\"color:#33cc33\">Correct</span>"
       ],
       "text/plain": [
-       "Incorrect: Expected file to exist with name `cows_and_goats.csv`"
+       "Correct"
       ]
      },
      "metadata": {},
@@ -923,7 +923,7 @@
    ],
    "source": [
     "# Your code goes here\n",
-    "\n",
+    "animals.to_csv('cows_and_goats.csv')\n",
     "# Check your answer\n",
     "q5.check()"
    ]
@@ -931,19 +931,19 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "01f43041",
+   "id": "5014ac63",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-08-16T00:44:43.602381Z",
-     "iopub.status.busy": "2022-08-16T00:44:43.601955Z",
-     "iopub.status.idle": "2022-08-16T00:44:43.606517Z",
-     "shell.execute_reply": "2022-08-16T00:44:43.605271Z"
+     "iopub.execute_input": "2022-08-16T02:05:00.457094Z",
+     "iopub.status.busy": "2022-08-16T02:05:00.456750Z",
+     "iopub.status.idle": "2022-08-16T02:05:00.460289Z",
+     "shell.execute_reply": "2022-08-16T02:05:00.459467Z"
     },
     "papermill": {
-     "duration": 0.01558,
-     "end_time": "2022-08-16T00:44:43.608776",
+     "duration": 0.013467,
+     "end_time": "2022-08-16T02:05:00.462405",
      "exception": false,
-     "start_time": "2022-08-16T00:44:43.593196",
+     "start_time": "2022-08-16T02:05:00.448938",
      "status": "completed"
     },
     "tags": []
@@ -956,13 +956,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7bc7af17",
+   "id": "a3a4081e",
    "metadata": {
     "papermill": {
-     "duration": 0.007147,
-     "end_time": "2022-08-16T00:44:43.623343",
+     "duration": 0.00786,
+     "end_time": "2022-08-16T02:05:00.477291",
      "exception": false,
-     "start_time": "2022-08-16T00:44:43.616196",
+     "start_time": "2022-08-16T02:05:00.469431",
      "status": "completed"
     },
     "tags": []
@@ -975,13 +975,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "796ca716",
+   "id": "062e07e8",
    "metadata": {
     "papermill": {
-     "duration": 0.007272,
-     "end_time": "2022-08-16T00:44:43.638034",
+     "duration": 0.006518,
+     "end_time": "2022-08-16T02:05:00.491333",
      "exception": false,
-     "start_time": "2022-08-16T00:44:43.630762",
+     "start_time": "2022-08-16T02:05:00.484815",
      "status": "completed"
     },
     "tags": []
@@ -1016,14 +1016,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 13.229733,
-   "end_time": "2022-08-16T00:44:44.366875",
+   "duration": 10.77361,
+   "end_time": "2022-08-16T02:05:01.116689",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2022-08-16T00:44:31.137142",
+   "start_time": "2022-08-16T02:04:50.343079",
    "version": "2.3.4"
   }
  },
